--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,9 +3,6 @@
     package="com.example.gymbuddy">
 
     <uses-permission android:name="android.permission.WAKE_LOCK" />
-
-
-
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -17,10 +14,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".PostDetailActivity"></activity>
+
         <uses-library
             android:name="com.google.android.wearable"
             android:required="false" />
-
         <!--
                Set to true if your app is Standalone, that is, it does not require the handheld
                app to run.
@@ -31,12 +29,9 @@
 
         <activity
             android:name=".ThereProfileActivity"
-            android:label="@string/title_activity_there_profile">
-
-        </activity>
+            android:label="@string/title_activity_there_profile"></activity>
         <activity android:name=".AddPostActivity" />
-        <activity android:name=".DashboardActivity" >
-        </activity>
+        <activity android:name=".DashboardActivity"></activity>
         <activity android:name=".SignUpActivity" />
         <activity android:name=".HomePageActivity" />
         <activity android:name=".SignInActivity">
@@ -45,7 +40,6 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
     </application>
 
