--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,6 +42,18 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+
+        <!-- define file provider-->
+        <provider
+            android:authorities="com.example.gymbuddy.fileprovider"
+            android:name="androidx.core.content.FileProvider"
+            android:exported="false"
+            android:grantUriPermissions="true">
+            <meta-data
+               android:name="android.support.FILE_PROVIDER_PATHS"
+                android:resource="@xml/paths"
+                ></meta-data>
+        </provider>
     </application>
 
 </manifest>
